content-block added

--- a/client/index.html
+++ b/client/index.html
@@ -5,14 +5,15 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=1,user-scalable=no,minimal-ui">
 	<title>Get loot</title>
-	<link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.min.css">
+	<link rel="stylesheet" href="/bower_components/bootstrap/dist/css/bootstrap.min.css">
 	<link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
-	<link rel="stylesheet" href="fonts/fonts.css">
-	<link rel="stylesheet" href="bem_components/common/common.css">
-	<link rel="stylesheet" href="bem_components/header/header.css">
-	<link rel="stylesheet" href="bem_components/footer/footer.css">
-	<link rel="stylesheet" href="bem_components/slider/slider.css">
-	<link rel="stylesheet" href="bem_components/labels/labels.css">
+	<link rel="stylesheet" href="/fonts/fonts.css">
+	<link rel="stylesheet" href="/bem_components/common/common.css">
+	<link rel="stylesheet" href="/bem_components/header/header.css">
+	<link rel="stylesheet" href="/bem_components/footer/footer.css">
+	<link rel="stylesheet" href="/bem_components/slider/slider.css">
+	<link rel="stylesheet" href="/bem_components/labels/labels.css">
+	<link rel="stylesheet" href="/bem_components/main-content/main-content.css">
 </head>
 
 <body>
@@ -70,7 +71,7 @@
 				<div class="menu-area">
 					<div class="row">
 						<div class="col-md-12">
-							<div class="menu">
+							<div class="menu paper-shadow-z2">
 								<a class="menu-link" href="#">
 									<div class="menu__item">Faq</div>
 								</a>
@@ -97,7 +98,7 @@
 			<div class="slider-area">
 				<div class="row">
 					<div class="col-md-12">
-						<div class="slider">
+						<div class="slider paper-shadow-z2">
 							<div id="main-slider" class="carousel slide" data-ride="carousel">
 								<div class="carousel-inner" role="listbox">
 									<a href="http://somelink.com" target="_blank" class="item active">
@@ -124,7 +125,7 @@
 				</div>
 			</div>
 			<div class="labels-area">
-				<div class="labels">
+				<div class="labels paper-shadow-z2">
 					<div class="labels__item">
 						<div class="label-container label-container--shield">
 							<div class="shield shield--speed"></div>
@@ -160,11 +161,147 @@
 					</div>
 				</div>
 			</div>
+			<div class="main-content-area">
+				<div class="main-content paper-shadow-z2">
+					<div class="row no-padding">
+						<div class="col-sm-6 col-md-6 no-padding">
+							<div class="card-item">
+								<div class="card card--big" style="background-image: url(./img/content/1.png)">
+									<div class="text-center">
+										<a href="#" class="card__link">
+											<span class="card__title card__title--big">World of warcraft</span>
+										</a>
+										<br>
+										<span class="card__subtitle card__subtitle--big">Золото, луты, прокачка, услуги...</span>
+									</div>
+								</div>
+							</div>
+						</div>
+						<div class="col-sm-6 col-md-6 no-padding">
+							<div class="card-item">
+								<div class="card card--big" style="background-image: url(./img/content/2.png)">
+									<div class="text-center">
+										<a href="#" class="card__link">
+											<span class="card__title card__title--big">Blade and soul</span>
+										</a>
+										<br>
+										<span class="card__subtitle card__subtitle--big">Золото</span>
+									</div>
+								</div>
+							</div>
+						</div>
+						<div class="col-xs-12 col-sm-3 col-md-3 no-padding">
+							<div class="card-item">
+								<div class="card card--mini" style="background-image: url(./img/content/3.png)">
+									<div class="text-center">
+										<a href="#" class="card__link">
+											<span class="card__title card__title--small">Diablo 3</span>
+										</a>
+										<br>
+										<span class="card__subtitle card__subtitle--small">Золото, луты, прокачка, услуги...</span>
+									</div>
+								</div>
+							</div>
+						</div>
+						<div class="col-xs-12 col-sm-3 col-md-3 no-padding">
+							<div class="card-item">
+								<div class="card card--mini" style="background-image: url(./img/content/4.png)">
+									<div class="text-center">
+										<a href="#" class="card__link">
+											<span class="card__title card__title--small">Tera</span>
+										</a>
+										<br>
+										<span class="card__subtitle card__subtitle--small">Золото</span>
+									</div>
+								</div>
+							</div>
+						</div>
+						<div class="col-xs-12 col-sm-3 col-md-3 no-padding">
+							<div class="card-item">
+								<div class="card card--mini" style="background-image: url(./img/content/5.png)">
+									<div class="text-center">
+										<a href="#" class="card__link">
+											<span class="card__title card__title--small">Star wars</span>
+										</a>
+										<br>
+										<span class="card__subtitle card__subtitle--small">Кредиты, прокачка</span>
+									</div>
+								</div>
+							</div>
+						</div>
+						<div class="col-xs-12 col-sm-3 col-md-3 no-padding">
+							<div class="card-item">
+								<div class="card card--mini" style="background-image: url(./img/content/6.png)">
+									<div class="text-center">
+										<a href="#" class="card__link">
+											<span class="card__title card__title--small">Lineage 2</span>
+										</a>
+										<br>
+										<span class="card__subtitle card__subtitle--small">Аренда</span>
+									</div>
+								</div>
+							</div>
+						</div>
+						<div class="col-xs-12 col-sm-3 col-md-3 no-padding">
+							<div class="card-item">
+								<div class="card card--mini" style="background-image: url(./img/content/7.png)">
+									<div class="text-center">
+										<a href="#" class="card__link">
+											<span class="card__title card__title--small">black desert</span>
+										</a>
+										<br>
+										<span class="card__subtitle card__subtitle--small">Прокачка</span>
+									</div>
+								</div>
+							</div>
+						</div>
+						<div class="col-xs-12 col-sm-3 col-md-3 no-padding">
+							<div class="card-item">
+								<div class="card card--mini" style="background-image: url(./img/content/8.png)">
+									<div class="text-center">
+										<a href="#" class="card__link">
+											<span class="card__title card__title--small">Tes online</span>
+										</a>
+										<br>
+										<span class="card__subtitle card__subtitle--small">Золото</span>
+									</div>
+								</div>
+							</div>
+						</div>
+						<div class="col-xs-12 col-sm-3 col-md-3 no-padding">
+							<div class="card-item">
+								<div class="card card--mini" style="background-image: url(./img/content/3.png)">
+									<div class="text-center">
+										<a href="#" class="card__link">
+											<span class="card__title card__title--small">Vildstar online</span>
+										</a>
+										<br>
+										<span class="card__subtitle card__subtitle--small">Кредиты, прокачка</span>
+									</div>
+								</div>
+							</div>
+						</div>
+						<div class="col-xs-12 col-sm-3 col-md-3 no-padding">
+							<div class="card-item">
+								<div class="card card--mini" style="background-image: url(./img/content/6.png)">
+									<div class="text-center">
+										<a href="#" class="card__link">
+											<span class="card__title card__title--small">Aion</span>
+										</a>
+										<br>
+										<span class="card__subtitle card__subtitle--small">Кинары</span>
+									</div>
+								</div>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
 		</div>
 	</div>
 
-	<script src="bower_components/jquery/dist/jquery.min.js"></script>
-	<script src="bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
+	<script src="/bower_components/jquery/dist/jquery.min.js"></script>
+	<script src="/bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
 </body>
 
 </html>
