--- a/client/category.html
+++ b/client/category.html
@@ -10,8 +10,7 @@
 	<link rel="stylesheet" href="/fonts/fonts.css">
 	<link rel="stylesheet" href="/bem_components/common/common.css">
 	<link rel="stylesheet" href="/bem_components/header/header.css">
-	<link rel="stylesheet" href="/bem_components/slider/slider.css">
-	<link rel="stylesheet" href="/bem_components/labels/labels.css">
+	<link rel="stylesheet" href="/bem_components/category-head/category-head.css">
 	<link rel="stylesheet" href="/bem_components/main-content/main-content.css">
 	<link rel="stylesheet" href="/bem_components/footer/footer.css">
 </head>
@@ -95,203 +94,123 @@
 					</div>
 				</div>
 			</header>
-			<div class="slider-area">
-				<div class="row">
-					<div class="col-md-12">
-						<div class="slider paper-shadow-z2">
-							<div id="main-slider" class="carousel slide" data-ride="carousel">
-								<div class="carousel-inner" role="listbox">
-									<a href="http://somelink.com" target="_blank" class="item active">
-										<img src="./img/slider/1.png" alt="">
-									</a>
-									<a href="http://somelink.com" target="_blank" class="item">
-										<img src="./img/slider/1.png" alt="">
-									</a>
-									<a href="http://somelink.com" target="_blank" class="item">
-										<img src="./img/slider/1.png" alt="">
-									</a>
-								</div>
-								<div class="slider-controls">
-									<a href="#main-slider" class="slider-controls__btn" role="button" data-slide="prev">
-										<i class="material-icons slider-icon">chevron_left</i>
-									</a>
-									<a href="#main-slider" class="slider-controls__btn" role="button" data-slide="next">
-										<i class="material-icons slider-icon">chevron_right</i>
-									</a>
-								</div>
-							</div>
+
+			<div class="category-head-area">
+				<div class="category-head">
+					<div class="category-controls">
+						<div class="category-controls__btn">
+							<i class="material-icons category-icon">chevron_left</i>
 						</div>
+						<span class="category-row">Другие игры</span>
 					</div>
+					<div class="category-head__title">World of warcraft</div>
 				</div>
 			</div>
-			<div class="labels-area">
-				<div class="labels paper-shadow-z2">
-					<div class="labels__item">
-						<div class="label-container label-container--shield">
-							<div class="shield shield--speed"></div>
-						</div>
-						<div class="label-container label-container--text">
-							<div>
-								<div class="labels__title">Быстро</div>
-								<div class="labels__subtitle">Среднее время доставки валюты 26 минут</div>
-							</div>
-						</div>
-					</div>
-					<div class="labels__item labels__item--active">
-						<div class="label-container label-container--shield">
-							<div class="shield shield--protect"></div>
-						</div>
-						<div class="label-container label-container--text">
-							<div>
-								<div class="labels__title">Надежно</div>
-								<div class="labels__subtitle">Каждую неделю более сотни новых отзывов</div>
-							</div>
-						</div>
-					</div>
-					<div class="labels__item">
-						<div class="label-container label-container--shield">
-							<div class="shield shield--medal"></div>
-						</div>
-						<div class="label-container label-container--text">
-							<div>
-								<div class="labels__title">Проверено</div>
-								<div class="labels__subtitle">Мы успешно работаем с 2009 года</div>
-							</div>
-						</div>
-					</div>
-				</div>
-			</div>
+
 			<div class="main-content-area">
 				<div class="main-content paper-shadow-z2">
 					<div class="row no-padding">
 						<div class="col-sm-6 col-md-6 no-padding">
 							<div class="card-item">
-								<div class="card card--big" style="background-image: url(./img/content/1.png)">
-									<div class="text-center">
-										<a href="#" class="card__link">
-											<span class="card__title card__title--big">World of warcraft</span>
-										</a>
-										<br>
-										<span class="card__subtitle card__subtitle--big">Золото, луты, прокачка, услуги...</span>
+								<a href="#" class="card__link">
+									<div class="card card--category" style="background-image: url(./img/category/1.png)">
+										<div class="text-center">
+											<span class="card__title card__title--big">Золото Ru</span>
+											<br>
+											<span class="card__subtitle card__subtitle--big">от 3 рублей</span>
+										</div>
 									</div>
-								</div>
+								</a>
 							</div>
 						</div>
 						<div class="col-sm-6 col-md-6 no-padding">
 							<div class="card-item">
-								<div class="card card--big" style="background-image: url(./img/content/2.png)">
-									<div class="text-center">
-										<a href="#" class="card__link">
-											<span class="card__title card__title--big">Blade and soul</span>
-										</a>
-										<br>
-										<span class="card__subtitle card__subtitle--big">Золото</span>
+								<a href="#" class="card__link">
+									<div class="card card--category" style="background-image: url(./img/category/2.png)">
+										<div class="text-center">
+											<span class="card__title card__title--big">Золото Eu</span>
+											<br>
+											<span class="card__subtitle card__subtitle--big">от 7 рублей</span>
+										</div>
 									</div>
-								</div>
+								</a>
 							</div>
 						</div>
 						<div class="col-xs-12 col-sm-3 col-md-3 no-padding">
 							<div class="card-item">
-								<div class="card card--mini" style="background-image: url(./img/content/3.png)">
-									<div class="text-center">
-										<a href="#" class="card__link">
-											<span class="card__title card__title--small">Diablo 3</span>
-										</a>
-										<br>
-										<span class="card__subtitle card__subtitle--small">Золото, луты, прокачка, услуги...</span>
+								<a href="#" class="card__link">
+									<div class="card card--mini" style="background-image: url(./img/category/3.png)">
+										<div class="text-center">
+											<span class="card__title card__title--small">Лут-рейды</span>
+										</div>
 									</div>
-								</div>
+								</a>
 							</div>
 						</div>
 						<div class="col-xs-12 col-sm-3 col-md-3 no-padding">
 							<div class="card-item">
-								<div class="card card--mini" style="background-image: url(./img/content/4.png)">
-									<div class="text-center">
-										<a href="#" class="card__link">
-											<span class="card__title card__title--small">Tera</span>
-										</a>
-										<br>
-										<span class="card__subtitle card__subtitle--small">Золото</span>
+								<a href="#" class="card__link">
+									<div class="card card--mini" style="background-image: url(./img/category/4.png)">
+										<div class="text-center">
+											<span class="card__title card__title--small">Маунты</span>
+										</div>
 									</div>
-								</div>
+								</a>
 							</div>
 						</div>
 						<div class="col-xs-12 col-sm-3 col-md-3 no-padding">
 							<div class="card-item">
-								<div class="card card--mini" style="background-image: url(./img/content/5.png)">
-									<div class="text-center">
-										<a href="#" class="card__link">
-											<span class="card__title card__title--small">Star wars</span>
-										</a>
-										<br>
-										<span class="card__subtitle card__subtitle--small">Кредиты, прокачка</span>
+								<a href="#" class="card__link">
+									<div class="card card--mini" style="background-image: url(./img/category/5.png)">
+										<div class="text-center">
+											<span class="card__title card__title--small">Ключи Ru/Eu</span>
+										</div>
 									</div>
-								</div>
+								</a>
 							</div>
 						</div>
 						<div class="col-xs-12 col-sm-3 col-md-3 no-padding">
 							<div class="card-item">
-								<div class="card card--mini" style="background-image: url(./img/content/6.png)">
-									<div class="text-center">
-										<a href="#" class="card__link">
-											<span class="card__title card__title--small">Lineage 2</span>
-										</a>
-										<br>
-										<span class="card__subtitle card__subtitle--small">Аренда</span>
+								<a href="#" class="card__link">
+									<div class="card card--mini" style="background-image: url(./img/category/6.png)">
+										<div class="text-center">
+											<span class="card__title card__title--small">Прокачка</span>
+										</div>
 									</div>
-								</div>
+								</a>
 							</div>
 						</div>
 						<div class="col-xs-12 col-sm-3 col-md-3 no-padding">
 							<div class="card-item">
-								<div class="card card--mini" style="background-image: url(./img/content/7.png)">
-									<div class="text-center">
-										<a href="#" class="card__link">
-											<span class="card__title card__title--small">black desert</span>
-										</a>
-										<br>
-										<span class="card__subtitle card__subtitle--small">Прокачка</span>
+								<a href="#" class="card__link">
+									<div class="card card--mini" style="background-image: url(./img/category/7.png)">
+										<div class="text-center">
+											<span class="card__title card__title--small">Репутации</span>
+										</div>
 									</div>
-								</div>
+								</a>
 							</div>
 						</div>
 						<div class="col-xs-12 col-sm-3 col-md-3 no-padding">
 							<div class="card-item">
-								<div class="card card--mini" style="background-image: url(./img/content/8.png)">
-									<div class="text-center">
-										<a href="#" class="card__link">
-											<span class="card__title card__title--small">Tes online</span>
-										</a>
-										<br>
-										<span class="card__subtitle card__subtitle--small">Золото</span>
+								<a href="#" class="card__link">
+									<div class="card card--mini" style="background-image: url(./img/category/8.png)">
+										<div class="text-center">
+											<span class="card__title card__title--small">Услуги</span>
+										</div>
 									</div>
-								</div>
+								</a>
 							</div>
 						</div>
 						<div class="col-xs-12 col-sm-3 col-md-3 no-padding">
 							<div class="card-item">
-								<div class="card card--mini" style="background-image: url(./img/content/3.png)">
-									<div class="text-center">
-										<a href="#" class="card__link">
-											<span class="card__title card__title--small">Vildstar online</span>
-										</a>
-										<br>
-										<span class="card__subtitle card__subtitle--small">Кредиты, прокачка</span>
+								<a href="#" class="card__link">
+									<div class="card card--mini" style="background-image: url(./img/category/9.png)">
+										<div class="text-center">
+											<span class="card__title card__title--small">Pvp</span>
+										</div>
 									</div>
-								</div>
-							</div>
-						</div>
-						<div class="col-xs-12 col-sm-3 col-md-3 no-padding">
-							<div class="card-item">
-								<div class="card card--mini" style="background-image: url(./img/content/6.png)">
-									<div class="text-center">
-										<a href="#" class="card__link">
-											<span class="card__title card__title--small">Aion</span>
-										</a>
-										<br>
-										<span class="card__subtitle card__subtitle--small">Кинары</span>
-									</div>
-								</div>
+								</a>
 							</div>
 						</div>
 					</div>
