--- a/client/index.html
+++ b/client/index.html
@@ -5,16 +5,18 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=1,user-scalable=no,minimal-ui">
 	<title>Get loot</title>
-	<link rel="stylesheet" href="/bower_components/bootstrap/dist/css/bootstrap.min.css">
+	<link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.min.css">
 	<link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
-	<link rel="stylesheet" href="/fonts/fonts.css">
-	<link rel="stylesheet" href="/bem_components/common/common.css">
-	<link rel="stylesheet" href="/bem_components/header/header.css">
-	<link rel="stylesheet" href="/bem_components/slider/slider.css">
-	<link rel="stylesheet" href="/bem_components/labels/labels.css">
-	<link rel="stylesheet" href="/bem_components/category-head/category-head.css">
-	<link rel="stylesheet" href="/bem_components/main-content/main-content.css">
-	<link rel="stylesheet" href="/bem_components/footer/footer.css">
+	<link rel="stylesheet" href="http://fonts.googleapis.com/css?family=PT+Sans:bold">
+	<link rel="stylesheet" href="fonts/fonts.css">
+	<link rel="stylesheet" href="bem_components/common/common.css">
+	<link rel="stylesheet" href="bem_components/header/header.css">
+	<link rel="stylesheet" href="bem_components/slider/slider.css">
+	<link rel="stylesheet" href="bem_components/labels/labels.css">
+	<link rel="stylesheet" href="bem_components/sub-categories/sub-categories.css">
+	<link rel="stylesheet" href="bem_components/category-head/category-head.css">
+	<link rel="stylesheet" href="bem_components/main-content/main-content.css">
+	<link rel="stylesheet" href="bem_components/footer/footer.css">
 </head>
 
 <body>
@@ -392,9 +394,9 @@
 		</div>
 	</div>
 
-	<script src="/bower_components/jquery/dist/jquery.min.js"></script>
-	<script src="/bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
-	<script src="/bem_components/header/scripts/mobile-menu.js"></script>
+	<script src="bower_components/jquery/dist/jquery.min.js"></script>
+	<script src="bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
+	<script src="bem_components/header/scripts/mobile-menu.js"></script>
 	<script src="//vk.com/js/api/openapi.js?121"></script>
 	<script>
 		VK.Widgets.Group('vkGroups', {
