--- a/client/sub.html
+++ b/client/sub.html
@@ -91,9 +91,18 @@
 									<a class="menu-link" href="#">
 										<div class="menu__item">Контакты</div>
 									</a>
-									<a class="menu-link" href="#">
-										<div class="menu__item">Личный кабинет</div>
-									</a>
+
+									<div class="logentry">
+										<a href="#" class="logentry__link">Личный кабинет</a>
+										<div>
+											<div class="logentry__email">
+												<i class="material-icons person-icon">person</i> Abracadabra@gmail.com</div>
+											<div class="logout">
+												<span>/</span>
+												<a href="#" class="logout__link">Выйти</a>
+											</div>
+										</div>
+									</div>
 								</div>
 							</div>
 						</div>
@@ -136,42 +145,87 @@
 					</div>
 				</div>
 			</header>
+			<div class="sub-categories-area">
+				<div class="sub-categories">
+					<div class="sub-categories__item sub-categories__title">
+						<span>World of Warcraft:</span>
+					</div>
+					<a href="#" class="item-link">
+						<div class="sub-categories__item">
+							<span>Золото RU</span>
+						</div>
+					</a>
+
+					<a href="#" class="item-link">
+						<div class="sub-categories__item">
+							<span>Золото EU</span>
+						</div>
+					</a>
+					<a href="#" class="item-link">
+						<div class="sub-categories__item">
+							<span>Лут-рейды</span>
+						</div>
+					</a>
+					<a href="#" class="item-link">
+						<div class="sub-categories__item">
+							<span>Услуги</span>
+						</div>
+					</a>
+					<a href="#" class="item-link">
+						<div class="sub-categories__item">
+							<span>Маунты</span>
+						</div>
+					</a>
+					<a href="#" class="item-link">
+						<div class="sub-categories__item">
+							<span>Ключи RU/EU</span>
+						</div>
+					</a>
+					<a href="#" class="item-link">
+						<div class="sub-categories__item">
+							<span>Прокачка</span>
+						</div>
+					</a>
+					<a href="#" class="item-link">
+						<div class="sub-categories__item">
+							<span>Репутации</span>
+						</div>
+					</a>
+					<a href="#" class="item-link">
+						<div class="sub-categories__item">
+							<span>PvP</span>
+						</div>
+					</a>
+				</div>
+			</div>
 			<div class="category-head-area">
 				<div class="category-head">
 					<div class="category-controls">
 						<div class="category-controls__btn">
 							<i class="material-icons category-icon">chevron_left</i>
 						</div>
-						<span class="category-row">Другие игры</span>
+						<span class="category-row">World of warcraft</span>
 					</div>
-					<div class="category-head__title">World of warcraft</div>
+					<div class="category-head__title category-head__title--less-font">World of warcraft: лут рейды</div>
 				</div>
 			</div>
-
 			<div class="main-content-area">
 				<div class="main-content paper-shadow-z2">
 					<div class="row no-padding">
-						<div class="col-sm-6 col-md-6 no-padding">
+						<div class="col-xs-12 col-sm-3 col-md-3 no-padding">
 							<div class="card-item">
 								<a href="#" class="card__link">
-									<div class="card card--category" style="background-image: url(./img/category/1.png)">
-										<div class="text-center">
-											<span class="card__title card__title--big">Золото Ru</span>
-											<br>
-											<span class="card__subtitle card__subtitle--big">от 3 рублей</span>
-										</div>
+									<div class="card card--mini" style="background-image: url(./img/sub-category/1.png)">
 									</div>
-								</a>
-							</div>
-						</div>
-						<div class="col-sm-6 col-md-6 no-padding">
-							<div class="card-item">
-								<a href="#" class="card__link">
-									<div class="card card--category" style="background-image: url(./img/category/2.png)">
-										<div class="text-center">
-											<span class="card__title card__title--big">Золото Eu</span>
-											<br>
-											<span class="card__subtitle card__subtitle--big">от 7 рублей</span>
+									<div class="text-right card-price">
+										<span class="card__title card__title--small">4190 <span class="rub-symbol">&#8399;</span></span>
+									</div>
+									<div class="card-description">
+										<div class="card-description__title">
+											Чернорук (Эпохальный)
+										</div>
+										<div class="card-description__row">
+											Время выполнения: 2-3 часа. Требования: передача аккаунта и 100 уровень.
 										</div>
 									</div>
 								</a>
@@ -180,9 +234,17 @@
 						<div class="col-xs-12 col-sm-3 col-md-3 no-padding">
 							<div class="card-item">
 								<a href="#" class="card__link">
-									<div class="card card--mini" style="background-image: url(./img/category/3.png)">
-										<div class="text-center">
-											<span class="card__title card__title--small">Лут-рейды</span>
+									<div class="card card--mini" style="background-image: url(./img/sub-category/2.png)">
+									</div>
+									<div class="text-right card-price">
+										<span class="card__title card__title--small">790 <span class="rub-symbol">&#8399;</span></span>
+									</div>
+									<div class="card-description">
+										<div class="card-description__title">
+											Убийство Архимонда героик
+										</div>
+										<div class="card-description__row">
+											Время выполнения: 1 час. Требования: 100 уровень.
 										</div>
 									</div>
 								</a>
@@ -191,9 +253,17 @@
 						<div class="col-xs-12 col-sm-3 col-md-3 no-padding">
 							<div class="card-item">
 								<a href="#" class="card__link">
-									<div class="card card--mini" style="background-image: url(./img/category/4.png)">
-										<div class="text-center">
-											<span class="card__title card__title--small">Маунты</span>
+									<div class="card card--mini" style="background-image: url(./img/sub-category/3.png)">
+									</div>
+									<div class="text-right card-price">
+										<span class="card__title card__title--small">13900 <span class="rub-symbol">&#8399;</span></span>
+									</div>
+									<div class="card-description">
+										<div class="card-description__title">
+											Цитадель адского пламени (Эпохальный режим) лут-поход
+										</div>
+										<div class="card-description__row">
+											Время выполнения: 3-4 часа. Требования: передача аккаунта и 100 уровень.
 										</div>
 									</div>
 								</a>
@@ -202,9 +272,17 @@
 						<div class="col-xs-12 col-sm-3 col-md-3 no-padding">
 							<div class="card-item">
 								<a href="#" class="card__link">
-									<div class="card card--mini" style="background-image: url(./img/category/5.png)">
-										<div class="text-center">
-											<span class="card__title card__title--small">Ключи Ru/Eu</span>
+									<div class="card card--mini" style="background-image: url(./img/sub-category/4.png)">
+									</div>
+									<div class="text-right card-price">
+										<span class="card__title card__title--small">790 <span class="rub-symbol">&#8399;</span></span>
+									</div>
+									<div class="card-description">
+										<div class="card-description__title">
+											Эпохальные подземелья 8/8, 5 человек
+										</div>
+										<div class="card-description__row">
+											Время выполнения: 2-3 часа. Требования: передача аккаунта и 100 уровень.
 										</div>
 									</div>
 								</a>
@@ -213,9 +291,17 @@
 						<div class="col-xs-12 col-sm-3 col-md-3 no-padding">
 							<div class="card-item">
 								<a href="#" class="card__link">
-									<div class="card card--mini" style="background-image: url(./img/category/6.png)">
-										<div class="text-center">
-											<span class="card__title card__title--small">Прокачка</span>
+									<div class="card card--mini" style="background-image: url(./img/sub-category/5.png)">
+									</div>
+									<div class="text-right card-price">
+										<span class="card__title card__title--small">4190 <span class="rub-symbol">&#8399;</span></span>
+									</div>
+									<div class="card-description">
+										<div class="card-description__title">
+											Чернорук (Эпохальный)
+										</div>
+										<div class="card-description__row">
+											Время выполнения: 2-3 часа. Требования: передача аккаунта и 100 уровень.
 										</div>
 									</div>
 								</a>
@@ -224,9 +310,17 @@
 						<div class="col-xs-12 col-sm-3 col-md-3 no-padding">
 							<div class="card-item">
 								<a href="#" class="card__link">
-									<div class="card card--mini" style="background-image: url(./img/category/7.png)">
-										<div class="text-center">
-											<span class="card__title card__title--small">Репутации</span>
+									<div class="card card--mini" style="background-image: url(./img/sub-category/6.png)">
+									</div>
+									<div class="text-right card-price">
+										<span class="card__title card__title--small">790 <span class="rub-symbol">&#8399;</span></span>
+									</div>
+									<div class="card-description">
+										<div class="card-description__title">
+											Убийство Архимонда героик
+										</div>
+										<div class="card-description__row">
+											Время выполнения: 1 час. Требования: 100 уровень.
 										</div>
 									</div>
 								</a>
@@ -235,9 +329,17 @@
 						<div class="col-xs-12 col-sm-3 col-md-3 no-padding">
 							<div class="card-item">
 								<a href="#" class="card__link">
-									<div class="card card--mini" style="background-image: url(./img/category/8.png)">
-										<div class="text-center">
-											<span class="card__title card__title--small">Услуги</span>
+									<div class="card card--mini" style="background-image: url(./img/sub-category/3.png)">
+									</div>
+									<div class="text-right card-price">
+										<span class="card__title card__title--small">13900 <span class="rub-symbol">&#8399;</span></span>
+									</div>
+									<div class="card-description">
+										<div class="card-description__title">
+											Цитадель адского пламени (Эпохальный режим) лут-поход
+										</div>
+										<div class="card-description__row">
+											Время выполнения: 3-4 часа. Требования: передача аккаунта и 100 уровень.
 										</div>
 									</div>
 								</a>
@@ -246,12 +348,36 @@
 						<div class="col-xs-12 col-sm-3 col-md-3 no-padding">
 							<div class="card-item">
 								<a href="#" class="card__link">
-									<div class="card card--mini" style="background-image: url(./img/category/9.png)">
-										<div class="text-center">
-											<span class="card__title card__title--small">Pvp</span>
+									<div class="card card--mini" style="background-image: url(./img/sub-category/4.png)">
+									</div>
+									<div class="text-right card-price">
+										<span class="card__title card__title--small">790 <span class="rub-symbol">&#8399;</span></span>
+									</div>
+									<div class="card-description">
+										<div class="card-description__title">
+											Эпохальные подземелья 8/8, 5 человек
+										</div>
+										<div class="card-description__row">
+											Время выполнения: 2-3 часа. Требования: передача аккаунта и 100 уровень.
 										</div>
 									</div>
 								</a>
+							</div>
+						</div>
+					</div>
+					<div class="content-divider"></div>
+					<div class="text-content">
+						<div class="row no-padding">
+							<div class="col-md-3">
+								<div class="text-content__title">
+									<span class="title-border">Описание</span>
+								</div>
+							</div>
+							<div class="col-md-9">
+								<div class="text-content__description">
+								<p>Основной показатель вашей успешности в игре, а так же просто, для удобства игры является экипировка вов. К сожалению нельзя на прямую купить ВоВ экипировку. Для получения заветного эпика, нужно собирать рейды из 10/25 человек, и проводить многие часы в попытках убить босса. Мы можем сделать все за вас на профессиональном уровне. Любая экипировка вов в героической сложности хм, или в нормальной версии, сложнейшие достижения (ачивы).</p>
+								<p>Так же вы можете купить полный комплект ТИР, или купить прохождение актуального контента вов. Данная услуга не дешевая, но как же приятно видеть цифры, вдвое выше обычных, будь то урон или исцеление!</p>
+								</div>
 							</div>
 						</div>
 					</div>
